Fix success step image overflow

--- a/src/features/wallet/components/actions/Actions.module.css
+++ b/src/features/wallet/components/actions/Actions.module.css
@@ -19,6 +19,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  overflow-x: hidden;
 }
 .successDrawer.mantine-Drawer-content {
   background-color: transparent;
